src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Capture_Manager_Office__c</fullName>
        <formula>Capture_Manager__r.Office_City__c  + &apos;, &apos; +  Capture_Manager__r.Office_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically populated from HR data after Capture Manager is selected.</inlineHelpText>
        <label>Capture Manager Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Manager_Status__c</fullName>
        <description>Displays status of the Capture Manager in the HR data table. Allows notifications that a capture manager has left AECOM.</description>
        <formula>TEXT(Capture_Manager__r.Status__c)</formula>
        <label>Capture Manager Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Manager_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who is responsible for overall opportunity; manages entire pursuit.</inlineHelpText>
        <label>Capture Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Capture_Manager_Opportunities_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who is responsible for overall opportunity; manages entire pursuit.</inlineHelpText>
        <label>Capture Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3) OR 4</booleanFilter>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active, Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Source.StageName</field>
                <operation>equals</operation>
                <value>6 Contracted/Booked/Won, 7 Canceled by Client, 8 No-Go, 9 Lost</value>
            </filterItems>
            <filterItems>
                <field>$User.CommunityNickname</field>
                <operation>equals</operation>
                <value>SystemNA</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_plan_in_place__c</fullName>
        <label>Capture plan in place?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ceiling_Amount_ReadOnly__c</fullName>
        <formula>Ceiling_Amount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Copied from top of screen for convenience.</inlineHelpText>
        <label>Ceiling Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ceiling_Amount_Total__c</fullName>
        <description>Total potential revenue of task orders under this contract</description>
        <inlineHelpText>Maximum total revenue to AECOM of task orders under this contract</inlineHelpText>
        <label>Ceiling Amount (Total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Order_Add_Services__c</fullName>
        <inlineHelpText>If yes, this opportunity needs to be linked to the original opportunity.</inlineHelpText>
        <label>Uplift/Change Order/Add Services?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Group__c</fullName>
        <formula>TEXT(Account.Client_Group__c)</formula>
        <inlineHelpText>Inherited from Account record for reference only - to change, edit the Account.</inlineHelpText>
        <label>Client Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Solicitation_ID_number__c</fullName>
        <label>Client Solicitation ID number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Subgroup__c</fullName>
        <description>Originally called Client Subgroup, then Market Sector, then reverted to Client Subgroup for FY14.
Displays the Client Subgroup (aka Market Sector) from the Account.</description>
        <formula>TEXT(Account.Client_Subgroup__c)</formula>
        <inlineHelpText>Inherited from Account record for reference only - to change, edit the Account.</inlineHelpText>
        <label>Client Subgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Outlook_Net_Revenue__c</fullName>
        <description>Does not display on page layouts. 
Visible for reporting only to Superuser and above. 
Requested by Kimberly Cowern</description>
        <formula>IF ( CONTAINS($RecordType.Name,&apos;Program&apos;), 0, 
IF (BEGINS(TEXT( StageName ),&quot;5&quot;),  Net_Revenue_TO_Project__c , 
IF (BEGINS(TEXT( StageName ),&quot;6&quot;), Net_Revenue_TO_Project__c, 
IF (IsClosed = False, Net_Forecast_Amount__c , 

0 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Outlook Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Combined_Outlook_Revenue__c</fullName>
        <description>Does not display on page layouts. 
Visible for reporting only to Superuser and above. 
Formula field: 
If Record Type contains Program, Field X = 0 (regardless of Stage), but 
If Stage = 1,2,3,4 then Field X contains Forecast Amount (Gross) 
If Stage = 5 or 6 then Field X contains Gross AECOM contract revenue 
If Stage = 7,8, or 9 then Field X = 0</description>
        <formula>IF ( CONTAINS($RecordType.Name,&apos;Program&apos;), 0,
IF (BEGINS(TEXT( StageName ),&quot;5&quot;), Amount ,
IF (BEGINS(TEXT( StageName ),&quot;6&quot;), Amount ,
IF (IsClosed = False, Forecast_Net_amount__c ,

0
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Outlook Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commercial_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Bid_or_Sole_source__c</fullName>
        <label>Competitive Bid or Sole source</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive Bid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conflict_Comments__c</fullName>
        <description>Enter comments on the conflict or overlap, if necessary.</description>
        <inlineHelpText>Comments on the conflict or overlap.</inlineHelpText>
        <label>Conflict/Overlap Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Type__c</fullName>
        <inlineHelpText>Select one</inlineHelpText>
        <label>Construction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base Building - Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Building - Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Fit-out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Construction_cost__c</fullName>
        <inlineHelpText>Owner’s capital cost for the entire project</inlineHelpText>
        <label>Construction cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Duration_Calendar_Months__c</fullName>
        <description>Displays number of discrete months in which work takes place, even if it is only one day of that month.</description>
        <formula>((YEAR(Work_end_date_del__c ) - YEAR(Estimated_work_start_date__c ) - 1) *12) + (12 - MONTH(Estimated_work_start_date__c) +1) + MONTH(Work_end_date_del__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays number of discrete months in which work takes place, even if it is only one day of that month.</inlineHelpText>
        <label>Contract Duration - Calendar Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Est_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the number of days to be added on to the Contract Est. Months for this contract</inlineHelpText>
        <label>Contract Est. Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Est_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>estimated number of months (calculated at 30 days) for this contract</inlineHelpText>
        <label>Contract Est. Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Negotiation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for Asia</description>
        <label>Contract Negotiation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_T_C_ORM_Approval_Date__c</fullName>
        <inlineHelpText>Date on which Contract Terms &amp; Conditions were approved by the Office of Risk Management.</inlineHelpText>
        <label>Contract T&amp;C ORM Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_T_C_date_submitted_to_ORM__c</fullName>
        <inlineHelpText>Date on which Contract Terms &amp; Conditions were submitted to Office of Risk Management</inlineHelpText>
        <label>Contract T&amp;C submitted date to ORM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_T_C_review_by_ORM__c</fullName>
        <description>Were Contract Terms &amp; Conditions reviewed by Office of Risk Management?</description>
        <label>Contract T&amp;C review by ORM?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cost Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus Award Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus Fixed Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus incentive fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus not to exceed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaranteed maximum price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indefinite Delivery/Indefinite Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M not to exceed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SATOC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_duration_in_Months__c</fullName>
        <formula>IF ( 
       OR ( ISBLANK(Work_end_date_del__c), ISBLANK(Estimated_work_start_date__c), Work_end_date_del__c &lt;   Estimated_work_start_date__c), 
     0, 
     ROUND( (Work_end_date_del__c - Estimated_work_start_date__c) / 30, 1 ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract duration in Months</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_duration_in_Months_text__c</fullName>
        <formula>IF (
       OR ( ISBLANK(Work_end_date_del__c), ISBLANK(Estimated_work_start_date__c), Work_end_date_del__c &lt; Estimated_work_start_date__c),
       &apos;&apos;,
       TEXT( ROUND( (Work_end_date_del__c - Estimated_work_start_date__c) / 365 - 0.5, 0 )  )+ &apos; years &apos; +
       TEXT( ROUND ( MOD(Work_end_date_del__c - Estimated_work_start_date__c, 365) / 30 - 0.5, 0 ) ) + &apos; months &apos; +
       TEXT( MOD ( MOD(Work_end_date_del__c - Estimated_work_start_date__c, 365), 30) ) + &apos; days&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract duration in Months text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_vehicle__c</fullName>
        <label>Contract vehicle</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing IDIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Bidder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Convert_to_Project__c</fullName>
        <formula>HYPERLINK(&quot;apex/ConvertTaskOrderToProject?id=&quot; &amp; Id, &quot;[Convert to Project]&quot;, &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Convert Task Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_to_Task_Order__c</fullName>
        <formula>HYPERLINK(&quot;enter VF Page url&quot;, &quot;[Convert to Task Order]&quot;, &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Convert Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Production_DateSave__c</fullName>
        <formula>(if( Estimated_work_start_date__c &gt;  WinDate__c  ,  Date_RFP_expected__c ,  Estimated_work_start_date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defaults to the latest due date can be overwritten by Proposal team.</inlineHelpText>
        <label>Current Production DateSave</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Production_Date__c</fullName>
        <inlineHelpText>Next submittal due date.</inlineHelpText>
        <label>Current Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOA_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOA Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Submitted_Date__c</fullName>
        <label>DOA Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_RFP_expected__c</fullName>
        <label>Date RFP expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_RFP_received__c</fullName>
        <label>Date RFP received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_RFQ_expected__c</fullName>
        <label>Date RFQ expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_RFQ_received__c</fullName>
        <label>Date RFQ received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_lost_cancelled_no_go__c</fullName>
        <inlineHelpText>Required at Stages 7, 8, and 9. Dates entered at other stages are removed when record is saved.</inlineHelpText>
        <label>Date lost/cancelled/no-go/hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Presentation_or_Interview__c</fullName>
        <inlineHelpText>Enter date of the interview.</inlineHelpText>
        <label>Date of Presentation or Interview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_SNB__c</fullName>
        <description>Calculates number of days opportunity was in Stage 5</description>
        <formula>Book_date__c -  WinDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days opportunity was in Stage 5</inlineHelpText>
        <label>Days in SNB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage_3__c</fullName>
        <description>calculates time in Stage 3</description>
        <formula>WinDate__c -  Stage_3_Date__c</formula>
        <label>Days in Stage 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_2_Name__c</fullName>
        <description>Department 2 name in text, needed for email alerts and field updates. Not visible on page layouts.</description>
        <formula>AECOM_Department_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 2 Name (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_2_TO_Project_Gross_Revenue__c</fullName>
        <formula>AECOM_Department_2_Percent__c * Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 2 TO/Project Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department_2_TO_Project_Net_Revenue__c</fullName>
        <formula>AECOM_Department_2_Percent__c * Net_Revenue_TO_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 2 TO/Project Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department_3_Name__c</fullName>
        <description>Displays Department 3 as text instead of link, needed for flow and alerts</description>
        <formula>AECOM_Department_3__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 3 Name (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_3_TO_Project_Gross_Revenue__c</fullName>
        <formula>AECOM_Department_3_Percent__c * Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 3 TO/Project Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department_3_TO_Project_Net_Revenue__c</fullName>
        <formula>AECOM_Department_3_Percent__c * Net_Revenue_TO_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 3 TO/Project Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department_4_TO_Project_Gross_Revenue__c</fullName>
        <formula>AECOM_Department_4_Percent__c * Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 4 TO/Project Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department_4_TO_Project_Net_Revenue__c</fullName>
        <formula>AECOM_Department_4_Percent__c * Net_Revenue_TO_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department 4 TO/Project Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the Project Description field is not empty</description>
        <label>Description Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>District_Priority__c</fullName>
        <inlineHelpText>Consult district manager before selecting Yes</inlineHelpText>
        <label>District Priority?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMEA_Priority_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Top 50 EMEA major pursuit which is a priority for the business (tracked and resourced by the major pursuits group)</inlineHelpText>
        <label>EMEA Priority 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMEA_Priority_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A major pursuit that we are progressing which has a long lead time (over 6 months) or is on hold</inlineHelpText>
        <label>EMEA Priority 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMEA_Priority_3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any major pursuit (from priority 1 and 2) which has been won/lost, cancelled, no go’d</inlineHelpText>
        <label>EMEA Priority 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERB_Reviewer__c</fullName>
        <description>Name of person conducting review</description>
        <inlineHelpText>Enter name of person conducting the ERB review</inlineHelpText>
        <label>ERB Reviewer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Client_Sector__c</fullName>
        <description>If this formula is edited, als edit the B&amp;P charge number formula: https://aecom.my.salesforce.com/00Na000000B64zw?setupid=OpportunityFields</description>
        <formula>IF (Client_Group__c = &quot;National Government&quot; &amp;&amp; (BEGINS(Account.Name, &quot;US &quot;) || BEGINS(Account.Name, &quot;USAID&quot;)|| BEGINS(Account.Name, &quot;Naval&quot;)  ) , &quot;US Federal Government&quot;,
 IF (Client_Group__c = &quot;National Government&quot; , &quot;Other National Government&quot;, 
CASE(Account.Client_Subgroup__c, &quot;Airports/Aviation&quot;, &quot;Aviation&quot;, 
&quot;Chemical/Pharmaceutical&quot;, &quot;ChemPharma&quot;, 
&quot;Oil/Gas Refining/Exploration and Prod/Dist&quot;, &quot;Oil &amp; Gas&quot;, 
&quot;Oil and Gas Transmission and Distribution&quot;, &quot;Oil &amp; Gas&quot;, 
&quot;Ports/Marine/Marinas&quot;, &quot;Port &amp; Marine&quot;, 
&quot;Rail - Heavy Freight Rail Transportation&quot;, &quot;Freight Rail&quot;, 
&quot;Freight Transportation (except rail) and Warehousing&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Rail - Private Local and Suburban Transit Passenger&quot;, &quot;Transit&quot;, 
&quot;Healthcare Services (Private)&quot;, &quot;Healthcare&quot;, 
&quot;Healthcare Agency / Services&quot;, &quot;Healthcare&quot;, 
&quot;Power - Alternative/Renewable&quot;, &quot;Power&quot;, 
&quot;Power - Fossil/Thermal Generation&quot;, &quot;Power&quot;, 
&quot;Power - Geothermal/Nuclear Generation&quot;, &quot;Power&quot;, 
&quot;Power - Hydro and Dam&quot;, &quot;Power&quot;, 
&quot;Power - Private Utility Gas/Electric Transmission/Distribution&quot;, &quot;Power&quot;, 
&quot;Education Agency / Services&quot;, &quot;Education&quot;, 
&quot;Education Services (Private)&quot;, &quot;Education&quot;, 
&quot;Sports/Amusement/Recreation&quot;, &quot;Sports&quot;, 
&quot;Leisure/Hospitality&quot;, &quot;Leisure&quot;, 
&quot;Arts/Museum/Galleries/Cultural&quot;, &quot;Leisure&quot;, 
&quot;Media/Entertainment&quot;, &quot;Leisure&quot;, 
&quot;Metals&quot;, &quot;Mining &amp; Metals&quot;, 
&quot;Mining Metal/Coal/Other&quot;, &quot;Mining &amp; Metals&quot;, 
&quot;Private/Commercial Developers&quot;, &quot;Commercial&quot;, 
&quot;Other Manufacturing&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Architect/Engineers/Consultants&quot;, &quot;Other Private&quot;, 
&quot;Legal/Banking/Finance/Insurance&quot;, &quot;Commercial&quot;, 
&quot;Retail and Retail Property&quot;, &quot;Commercial&quot;, 
&quot;Water Utility - Private&quot;, &quot;Water Systems&quot;, 
&quot;Automotive&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Construction Company - Buildings&quot;, &quot;Other Private&quot;, 
&quot;Construction Company - Infrastructure&quot;, &quot;Other Private&quot;, 
&quot;Food/Beverages/Agriculture&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Forestry/Pulp/Paper&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Aerospace/Defense&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Data/Technology/Communications&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Non-Government Transportation&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Other Industrial/Commercial&quot;, &quot;Other Private&quot;, 
&quot;Other Manufacturing&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Private Justice/Prisons/National Security Agencies / Services&quot;, &quot;Other Private&quot;,
&quot;Waste&quot;, &quot;Industrial &amp; Manufacturing&quot;, 
&quot;Transit Agency&quot;, &quot;Transit&quot;,
&quot;Roads/Highways Agency&quot;, &quot;Highway &amp; Bridge&quot;,

IF (BEGINS(Practice_Area_of_Primary_AECOM_Dept__r.Name, &quot;Highway&quot;), &quot;Highway &amp; Bridge&quot;,
 CASE (Practice_Area_of_Primary_AECOM_Dept__r.Name, &quot;Water&quot; , &quot;Water Systems&quot;, 
&quot;Wastewater&quot; , &quot;Wastewater Systems&quot;, 
&quot;Water Resources&quot;, &quot;Water Resources&quot;, 
&quot;Transit / Rail&quot;, &quot;Transit&quot;, 
&quot;Transit&quot;, &quot;Transit&quot;, 
&quot;Aviation&quot;, &quot;Aviation&quot;,

 CASE ( Account.Client_Group__c, &quot;Municipal&quot;, &quot;Other Public&quot;, &quot;State/Province Agencies&quot;, &quot;Other Public&quot;, &quot;Private&quot;, &quot;Other Private&quot;,
 
null))))))</formula>
        <inlineHelpText>Automatically populated by a formula, based primarily on the Client Group/Subgroup related to the Account (end client).</inlineHelpText>
        <label>End-Client Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Gross_Margin_Amt__c</fullName>
        <formula>IF (ISBLANK (Energy_Gross_Margin__c), null,
(Energy_Gross_Margin__c * Amount))</formula>
        <inlineHelpText>Calculated field. Formula: Energy GM % * AECOM Gross Revenue.</inlineHelpText>
        <label>Energy Gross Margin $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy_Gross_Margin__c</fullName>
        <inlineHelpText>Enter Gross Margin % as a whole number</inlineHelpText>
        <label>Energy Gross Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Energy_Service_Type__c</fullName>
        <inlineHelpText>Select type of work for opportunities in the Energy BL</inlineHelpText>
        <label>Energy Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>EPC/Design-Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engineering_Review_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if review is required.</inlineHelpText>
        <label>Engineering Review Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_work_start_date__c</fullName>
        <description>Date billable work will begin.</description>
        <inlineHelpText>Required for opportunities in Stages 2, 3, 4, 5, and 6. Enter the estimated (future) book date.</inlineHelpText>
        <label>Estimated work start date</label>
        <type>Date</type>
    </fields>
</CustomObject>